--- a/ConvenientStoreMVC/appsettings.json
+++ b/ConvenientStoreMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connect": "server=localhost;port=3306;database=convenientstore;user=springstudent;password=springstudent;"
+  }
 }
