--- a/ConvenientStoreMVC/appsettings.json
+++ b/ConvenientStoreMVC/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Connect": "server=localhost;port=3306;database=convenientstore;user=springstudent;password=springstudent;"
+  },
+  "Admin": {
+    "User": "Alice Johnson",
+    "Pass" : "123456"
   }
 }
