--- a/ConvenientStoreMVC/appsettings.json
+++ b/ConvenientStoreMVC/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connect": "server=localhost;port=3306;database=convenientstore;user=springstudent;password=springstudent;"
+    "Connect": "server=SG-prm-host-9424-mysql-master.servers.mongodirector.com;port=3306;database=convenientstore;user=sgroot;password=q^uvG2UxN43c16VT;"
   },
   "Admin": {
     "User": "Alice Johnson",
